--- a/week01/basic-layout.html
+++ b/week01/basic-layout.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>WDD 131 - Luis Estigarribia</title>
+    <title>Luis Estigarribia - WDD 131</title>
     <link rel="stylesheet" href="styles/layout.css">
 </head>
 <body>
