--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    <script defer src="scripts/getdates.js"></script>
+    <script src="scripts/getdates.js" defer></script>
 </head>
 <body>
     <header>
@@ -59,7 +59,7 @@
     </main>
     <footer>
         <p>© <span id="currentyear"></span> | Luis Estigarribia | Paraguay</p>
-        <p class="lastmodified">Last Modification: <span id="lastmodified"></span></p>
+        <p class="lastmodifiedcolor">Last Modification: <span id="lastmodified"></span></p>
     </footer>
 </body>
 </html>
