--- a/temples.html
+++ b/temples.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Picture Album</title>
+    <title>Temple Picture Album</title>
     <meta name="description" content="This is an assignment for the week02 Picture Album">
     <meta name="author" content="Luis Estigarribia">
     <link rel="stylesheet" href="styles/temples.css">
@@ -28,8 +28,8 @@
             </ul>
         </nav>
     </header>
-    <h2>Home</h2>
     <main>
+        <h2>Home</h2>
         <div class="container">
             <figure>
                 <img src="images/san-antonio-texas.jpg" alt="San Antonio Texas Temple">
