Corrected a syntax error with the source tag

--- a/place.html
+++ b/place.html
@@ -20,7 +20,7 @@
     <main>
         <div class="hero">
             <picture>
-                <source srcset="images/paraguay-large.webp" media="(min-width: 800px">
+                <source srcset="images/paraguay-large.webp" media="(min-width: 800px)">
                 <img src="images/paraguay.webp" alt="Palacio de los Lopez building">
             </picture>
         </div>
