Project Site Plan completed and fixed

--- a/project/siteplan.html
+++ b/project/siteplan.html
@@ -63,6 +63,8 @@
             personal, culinary touch to the site.
     </pre>
     <h2>Wireframe:</h2>
-    <a href="https://wireframe.cc/pro/pp/a31f79559850519" target="_blank">Link to Wireframe</a>
+    <a href="https://wireframe.cc/pro/pp/a31f79559850519" target="_blank">Link to Wireframe Large View</a>
+    <br>
+    <a href="https://wireframe.cc/pro/pp/a31f79559850519#53o78d5q" target="_blank">Link to Wireframe Mobile View</a>
 </body>
 </html>
