Project Site Plan completed and fixed color contrast issues

--- a/project/siteplan.html
+++ b/project/siteplan.html
@@ -25,22 +25,22 @@
     </pre>
     <h2>Color Schema:</h2>
     <pre>
-        <b>1- Primary Color: #FF6F61 (Coral Red)</b>
+        <b>1- Primary Color: #D84315 (Burnt Orange)</b>
 
-            ◾ Use: This vibrant color will be used for headings, buttons, and 
-            call-to-action elements to grab attention and evoke warmth and 
-            excitement related to cooking.
+            ◾ Use: For headings, buttons, and call-to-action elements. 
+            This darker shade of orange provides better contrast against 
+            lighter backgrounds.
 
-        <b>2-  Secondary Color: #FFF4E6 (Soft Cream)</b>
+        <b>2-  Secondary Color: #FAFAFA (Light Gray)</b>
 
-            ◾ Use: This soft, neutral color will serve as the background for the 
-            site, creating a clean and inviting space that highlights the content 
-            without overwhelming the user.
+            ◾ Use: For the background, offering sufficient contrast with
+            text and primary elements while keeping the design clean.
 
-        <b>3-  Accent Color: #4CAF50 (Fresh Green)</b>
+        <b>3-  Accent Color: #1B5E20 (Dark Green)</b>
 
-            ◾ Use: For icons, hyperlinks, and highlights, adding a fresh and 
-            natural vibe that complements the food theme.
+            ◾ Use: For links, icons, and highlights. This deep green 
+            contrasts well with both the light gray and burnt orange, 
+            ensuring visual clarity.
     </pre>
     <h2>Typography:</h2>
     <pre>
