--- a/project/siteplan.html
+++ b/project/siteplan.html
@@ -25,11 +25,11 @@
     </pre>
     <h2>Color Schema:</h2>
     <pre>
-        <b>1- Primary Color: #D84315 (Burnt Orange)</b>
+        <b>1- Primary Color: #791e02 (Deep Red)</b>
 
             ◾ Use: For headings, buttons, and call-to-action elements. 
-            This darker shade of orange provides better contrast against 
-            lighter backgrounds.
+            This bold color will draw attention and create a warm 
+            and inviting atmosphere for users to explore the site.
 
         <b>2-  Secondary Color: #FAFAFA (Light Gray)</b>
 
