Fixed some errors

--- a/form.html
+++ b/form.html
@@ -21,7 +21,7 @@
         <form action="review.html" method="get" id="reviewForm">
             <label for="pname">Product Name</label>
             <select name="pname" id="pname" required>
-                <option value="Choose an option" disabled selected>Select a Product</option>
+                <option value="" disabled selected>Select a Product</option>
             </select>
 
             <label for="rating">Overall Rating</label>
