--- a/review.html
+++ b/review.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="description" content="This is the review page for the W05 Assignment: Product Review Form">
     <meta name="author" content="Luis Estigarribia">
-    <title>Review Page</title>
+    <title>Product Review</title>
     <link rel="stylesheet" href="styles/form.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
